Resolve merge conflict

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -26,14 +26,14 @@
     "ax.plot(t, s)\n",
     "\n",
     "ax.set(xlabel='time (s)', ylabel='voltage (mV)',\n",
-    "       title='About as simple as it gets, folks')\n",
+    "       title='This plot is simple!')\n",
     "ax.grid('on')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a13839cd",
+   "id": "68a11483-bbe2-4e3a-ada0-5d8a319a1e41",
    "metadata": {},
    "outputs": [],
    "source": []
